- `open-legends`: (reinstated) open legends mode directly from a loaded fort

## New Features
- `quickfort`: add options for applying blueprints with warm and/or damp dig markers
- `gui/quickfort`: add options for applying blueprints with warm and/or damp dig markers
- `gui/reveal`: new "aquifer only" mode to only see hidden aquifers but not reveal any tiles

## Fixes
- `fix/loyaltycascade`: fix lookup of associated unit metadata when the metadata list is sparse (that is, the script was sometimes failing to fix the loyalties of renegate units because it was failing to find that unit's metadata)
- `quickfort`: reject tiles for building that contain magma or deep water

## Misc Improvements
- `gui/reveal`: show aquifers even when not in mining mode

## Removed
- `drain-aquifer`: replaced by ``aquifer drain --all``; an alias now exists so ``drain-aquifer`` will automatically run the new command

# 50.12-r2.1

## Fixes
- `fix/noexert-exhaustion`: fix typo in control panel registry entry which prevented the fix from being run when enabled
- `gui/suspendmanager`: fix script startup errors
- `control-panel`: properly auto-enable newly added bugfixes

## Misc Improvements
- `gui/unit-syndromes`: make syndromes searchable by their display names (e.g.  "necromancer")

# 50.12-r2

## New Tools
- `agitation-rebalance`: alter mechanics of irriation-related attacks so they are less constant and are more responsive to recent player bahavior
- `fix/ownership`: fix instances of multiple citizens claiming the same items, resulting in "Store owned item" job loops
- `fix/stuck-worship`: fix prayer so units don't get stuck in uninterruptible "Worship!" states
- `instruments`: provides information on how to craft the instruments used by the player civilization
- `modtools/item-trigger`: (reinstated) modder's resource for triggering scripted content when specific items are used